tests/error/rvalue_member_access.bz
// error: accessing member 'a' of an rvalue of type 'test_t' is not allowed
// note: type 'test_t' has a non-default destructor defined here
struct test_t
{
	.a: int32;

	destructor(&self);
}

function test()
{
	test_t().a;
}
